# ChangeLog for dev-perl/App-Nopaste
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/App-Nopaste/ChangeLog,v 1.11 2010/04/09 06:53:49 tove Exp $

  09 Apr 2010; Torsten Veller <tove@gentoo.org> -App-Nopaste-0.17.ebuild,
  -App-Nopaste-0.18.ebuild:
  Cleanup

  17 Mar 2010; Sebastian Pipping <sping@gentoo.org> App-Nopaste-0.17.ebuild,
  App-Nopaste-0.18.ebuild, App-Nopaste-0.19.ebuild:
  Propagate move of dev-util/git to dev-vcs/git

*App-Nopaste-0.19 (23 Feb 2010)

  23 Feb 2010; Torsten Veller <tove@gentoo.org> +App-Nopaste-0.19.ebuild:
  Version bump

*App-Nopaste-0.18 (31 Dec 2009)

  31 Dec 2009; Torsten Veller <tove@gentoo.org> +App-Nopaste-0.18.ebuild:
  Version bump

  24 Dec 2009; Torsten Veller <tove@gentoo.org> -App-Nopaste-0.15.ebuild,
  -App-Nopaste-0.16.ebuild:
  Cleanup

*App-Nopaste-0.17 (10 Nov 2009)

  10 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
  +App-Nopaste-0.17.ebuild:
  Version bump via perl-bump experimental tool.

*App-Nopaste-0.16 (17 Oct 2009)

  17 Oct 2009; Torsten Veller <tove@gentoo.org> +App-Nopaste-0.16.ebuild:
  Version bump

  16 Jul 2009; Torsten Veller <tove@gentoo.org> -App-Nopaste-0.11.ebuild,
  -App-Nopaste-0.12.ebuild:
  Cleanup

*App-Nopaste-0.15 (15 Jul 2009)

  15 Jul 2009; Torsten Veller <tove@gentoo.org> +App-Nopaste-0.15.ebuild:
  Version bump

*App-Nopaste-0.12 (14 Jul 2009)

  14 Jul 2009; Torsten Veller <tove@gentoo.org> +App-Nopaste-0.12.ebuild:
  Version bump

*App-Nopaste-0.11 (27 Jun 2009)

  27 Jun 2009; Robin H. Johnson <robbat2@gentoo.org>
  +App-Nopaste-0.11.ebuild, +metadata.xml:
  Initial commit. Imported from perl-overlay as a dependency for Devel-REPL.
  Ebuild created by Michele Beltrame <mb@italpro.net>.
