@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST App-Nopaste-0.19.tar.gz 30098 RMD160 f77ffa300d5232c7ed3b04049d1c9e21605b450b SHA1 261a37b54447b1917adf3c03bbc09a73ad95e2d7 SHA256 884c690d19ec4a44fa93309f1b608af4473e8dd160943beb08e946f270b6803b
+DIST App-Nopaste-0.20.tar.gz 33224 RMD160 d1bb002d19d8a9a48790a51c4f5ed7de1b4ccca3 SHA1 52498a2fce4fd56e2075070524834be5ab50ff63 SHA256 fb159ef6882dfc797c1c280a82214ddcdc556979a100da2074db37b1f33e341a
 EBUILD App-Nopaste-0.19.ebuild 708 RMD160 428c15396e304f752c3458b68a87d51ea211b949 SHA1 33f2524a1de78c3947990f6009e8d91ffc3ba2d4 SHA256 02f8c1861ab3a7f083e7a1d925138c60aa288f78cc4ab1d00cddc74c1af2e98e
-MISC ChangeLog 1769 RMD160 4dcc7a8242aceca4c9ea33c47d4d7f239c1e30b1 SHA1 d3d2ae14e9e974584ca29f4e31c2b0de9e2efe51 SHA256 e2005ab41f12d4477a1f3b590899d56332bb85f319506002d2734a239f2297eb
+EBUILD App-Nopaste-0.20.ebuild 707 RMD160 c69178824d6709203f94067282ab37fcb6810016 SHA1 8605c69b925829d81593cef2a8f5049c1b39fb7f SHA256 7b6990d9656c2b3c6484b21896a86b428b8202c0d9764e98195ad15e98cd770b
+MISC ChangeLog 1892 RMD160 24048e0bae1e2400758b47f5b9c6b278b9a25f4d SHA1 afd809545a9a1221151751143b6795ca26430f67 SHA256 789a5b5a88e4055379b8aaf96afeec75fa11e70f0f6ca616de6ef9ed7858005d
 MISC metadata.xml 443 RMD160 6f4ad8bd74627ca457e72745806ab87fec7e72b7 SHA1 67a0073e7fb274f2e41038c0f846a5be3e519928 SHA256 8534bac8364ed206770d6d8828b20383ff67870b41e9d76de4db9dee9b4c17a2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAku+zwMACgkQV3J2n04EauztngCfV0g/3ltTh1Su5rMitWoY97k1
-tQoAoJBFO5V8O3VBNlAQYU5OF4h+euY6
-=xHjQ
+iEYEARECAAYFAkvP5n8ACgkQV3J2n04Eauz7pQCfd+HUWfpaNvne3j0gLWgOPiLI
+l4EAnROS44BogJaQvdlFORvc/Y2qsL0C
+=u2c2
 -----END PGP SIGNATURE-----
