@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/App-Nopaste
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/App-Nopaste/ChangeLog,v 1.11 2010/04/09 06:53:49 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/App-Nopaste/ChangeLog,v 1.12 2010/04/22 06:02:34 tove Exp $
+
+*App-Nopaste-0.20 (22 Apr 2010)
+
+  22 Apr 2010; Torsten Veller <tove@gentoo.org> +App-Nopaste-0.20.ebuild:
+  Version bump
 
   09 Apr 2010; Torsten Veller <tove@gentoo.org> -App-Nopaste-0.17.ebuild,
   -App-Nopaste-0.18.ebuild:
